syntax = "proto3";

package sjchat.users;

option java_multiple_files = true;
option java_package = "sjchat.users";
option java_outer_classname = "UserServiceProto";

service UserService {
    rpc createUser (UserDataRequest) returns (UserResponse);
    rpc getUser (UserRequest) returns (UserResponse);
    rpc getUserByUsername (UserUsernameRequest) returns (UserResponse);
    rpc updateUser (UserDataRequest) returns (UserResponse);
}

message User {
    int64 id = 1;
    string username = 2;
}

message UserDataRequest {
    int64 id = 1;
    string username = 2;
}

message UserRequest {
    int64 id = 1;
}

message UserUsernameRequest{
    string username = 1;
}

message UserResponse {
    User user = 1;
}